--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h3 class="title">Minesweeper</h3>
-    <div class="subtext">Mines Left: 10</div>
+    <div class="subtext"></div>
     <div class="board"></div>
   </body>
 </html>
